# room

./: Cargo.toml  README.md
src/: binder.rs  chat.rs  lib.rs  opcodes.rs  player.rs  settings.rs  utils.rs  video.rs
src/js/: player.js
src/websocket/: bind.rs  identifiers.rs  mod.rs  ws.rs
src/websocket/js/: handle_ws.js
src/webtorrent/: binder.rs  mod.rs
src/webtorrent/js/: wt.js
static/: index.html
