[package]
name = "movie-room"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4"

anyhow = "1"
serde_json = "1"
rustc-hash = "1.1.0"
crossbeam = "0.8.0"

serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }